# perseo

./: .gitignore  .gitlab-ci.yml  README.md  nox_common.py  noxfile.py  zensical.toml
perseo-core/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml  ruff.toml
perseo-core/docs/source/: changelog.rst  conf.py  index.rst  install.rst
perseo-core/docs/source/user_manual/: attitude.rst  index.rst  logging.rst  reference_systems.rst
perseo-core/src/perseo_core/: __init__.py  logger.py  perseo_logger.py
perseo-core/src/perseo_core/geometry/: __init__.py  angles.py  angles_core.py  coords_conversions.py  doppler.py  ellipsoid.py  velocities.py
perseo-core/src/perseo_core/logger/: __init__.py  custom_handlers.py  logger.py
perseo-core/src/perseo_core/models/: __init__.py  attitude.py  cubic_spline_trajectory.py  enums.py  orbit.py  protocols.py  trajectories.py  trajectory.py  types.py
perseo-core/src/perseo_core/processing/: __init__.py  roi_features.py  signal_features.py
perseo-core/src/perseo_core/timing/: __init__.py  conversions.py  precise_datetime.py
perseo-core/tests/: __init__.py  common.py  conftest.py  test_logger.py  test_perseo_logger.py
perseo-core/tests/fixtures/: __init__.py  geometry_data.py  geometry_geocoding_data.py  geometry_utilities_data.py  models_data.py  timing_data.py  trajectory_angles_data.py  trajectory_attitude_data.py
perseo-core/tests/geometry/: __init__.py  test_angles.py  test_angles_core.py  test_conversions.py  test_coords_conversions.py  test_doppler.py  test_ellipsoid.py  test_reference_frames.py  test_rotation.py  test_velocities.py
perseo-core/tests/geometry/coordinates/: __init__.py  test_conversions.py  test_ellipsoid.py
perseo-core/tests/geometry/core/: __init__.py  test_angles.py
perseo-core/tests/geometry/geocoding/: __init__.py  test_direct_geocoding_bistatic.py  test_direct_geocoding_monostatic.py  test_direct_geocoding_with_looks.py  test_inverse_geocoding_bistatic.py  test_inverse_geocoding_monostatic.py
perseo-core/tests/geometry/navigation/: __init__.py  test_cubic_spline_trajectory.py
perseo-core/tests/geometry/pointing/: __init__.py  test_antenna_reference_frame.py  test_attitude.py  test_reference_frames.py  test_rotations.py
perseo-core/tests/geometry/utilities/: __init__.py  test_antenna_reference_frame.py  test_reference_frames.py  test_rotations.py
perseo-core/tests/models/: __init__.py  test_attitude.py  test_cubic_spline_trajectory.py  test_trajectories.py
perseo-core/tests/timing/: __init__.py  test_conversions.py  test_precise_datetime.py
perseo-perturbations/: .gitignore  .gitlab-ci.yml  README.md  meson.build  noxfile.py  pyproject.toml
perseo-perturbations/conda_recipe/: meta.yaml
perseo-perturbations/docs/source/: changelog.rst  conf.py  index.rst  install.rst
perseo-perturbations/scripts/: plot_igrf_map.py
perseo-perturbations/src/perseo_perturbations/: __init__.py  logger.py
perseo-perturbations/src/perseo_perturbations/atmospheric/: __init__.py  ionosphere.py  troposphere.py
perseo-perturbations/src/perseo_perturbations/geodynamics/: __init__.py  meson.build  plate_tectonics.py  solid_tides.py
perseo-perturbations/src/perseo_perturbations/geomagnetic/: __init__.py  igrf.py
perseo-perturbations/src/perseo_perturbations/resources/: __init__.py
perseo-perturbations/tests/: __init__.py  test_atmospheric_map_names_generation.py  test_plate_tectonics.py  test_solid_earth_tides.py
perseo-perturbations/tests/igrf/: __init__.py  test_conversions.py  test_igrf.py  test_shc_reader.py  test_utils.py
perseo-quality/: .gitignore  .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
perseo-quality/docs/source/: changelog.rst  conf.py  index.rst  install.rst
perseo-quality/docs/source/documentation/: elevation_notch_doc.rst  enl_doc.rst  index.rst  interferometric_analysis_doc.rst  point_target_analysis_doc.rst  radiometric_analysis_doc.rst  spectral_analysis_doc.rst  target_ambiguity_ratio_doc.rst
perseo-quality/scripts/: coherence_testing.py  elevation_notch_testing.py  equivalent_number_looks_testing.py  interferometric_analysis_testing.py  point_target_analysis_testing.py  point_wise_radiometry_testing.py  radiometric_profiles_testing.py  spectral_analysis_testing.py  target_ambiguty_ratio_analysis_testing.py
perseo-quality/src/perseo_quality/: __init__.py  logger.py
perseo-quality/src/perseo_quality/core/: __init__.py  common.py  custom_errors.py  generic_dataclasses.py  masking_operations.py  signal_processing.py
perseo-quality/src/perseo_quality/elevation_notch_analysis/: __init__.py  analysis.py  config.py  custom_dataclasses.py  graphical_output.py  support.py
perseo-quality/src/perseo_quality/enl_analysis/: __init__.py  analysis.py  custom_dataclasses.py
perseo-quality/src/perseo_quality/interferometric_analysis/: __init__.py  analysis.py  config.py  custom_dataclasses.py  graphical_output.py  support.py
perseo-quality/src/perseo_quality/io/: __init__.py  layout.py  point_targets.py  protocol_utilities.py  quality_input_protocol.py
perseo-quality/src/perseo_quality/point_targets_analysis/: __init__.py  analysis.py  config.py  custom_dataclasses.py  custom_errors.py  graphical_output.py  output_reference.py  rcs_geometric_computation.py  support.py
perseo-quality/src/perseo_quality/radiometric_analysis/: __init__.py  custom_dataclasses.py
perseo-quality/src/perseo_quality/spectral_analysis/: __init__.py  analysis.py  custom_dataclasses.py  graphical_output.py  support.py
perseo-quality/src/perseo_quality/tar_analysis/: __init__.py  analysis.py  config.py  custom_dataclasses.py  graphical_output.py  support.py
perseo-quality/tests/: __init__.py
perseo-quality/tests/integration_tests/: test_registry_windows.json
perseo-quality/tests/unit_tests/: __init__.py  conftest.py  test_utils.py
perseo-quality/tests/unit_tests/core/: __init__.py  test_common.py  test_masking_operations.py  test_signal_processing.py
perseo-quality/tests/unit_tests/elevation_notch/: __init__.py  test_elevation_notch_config.py  test_elevation_notch_plot.py  (+2 more)
(+191 files in other folders)
