[project]
name = "perseo-core"
description = "Python Ecosystem for Remote Sensing & Earth Observation: generic, broadly used operations and structures for SAR processing."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy>2",
    "scipy>1.15",
    "numpydantic >= 1.6",
    "pyproj>=3.5",
    "python-dateutil",
    "rich>=13.0.0",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["ruff", "pylint", "nox"]
test = ["pytest>8.0.0", "pytest-cov>7.0.0"]
docs = [
    "ipython",
    "nbsphinx",
    "sphinx>9",
    "sphinx-design",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/perseo_core/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "docs"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=perseo_core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = [".venv", "docs", "scripts"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "A", "B", "I"]

[tool.pylint.master]
fail-under = 8
fail-on = ["unused-import"]

[tool.pylint.message_control]
disable = ["import-error", "logging-fstring-interpolation", "logging-not-lazy"]

[tool.pylint.format]
max-line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.resolution]
respect-source-order = true

[tool.pdm.scripts]
format_check = "ruff format --check"
format = "ruff format"
sort = "ruff check --select I --fix-only"
lint_check = "ruff check"
lint_fix = "ruff check --show-fixes --fix-only"
test = "python -m pytest ./tests/ -v --cov=perseo_core --cov-report=html --cov-report=term"
clean_doc = "python -m sphinx -M clean docs/source {args}"
build_doc = "python -m sphinx -b html docs/source {args}"
check_code = { composite = ["format_check", "lint_check"] }
fix_format = { composite = ["format", "sort", "lint_fix"] }
