[project]
name = "perseo-quality"
description = "Python Ecosystem for Remote Sensing & Earth Observation: SAR Products Quality analyses."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy",
    "pandas >= 1.4.0",
    "scipy > 1.13",
    "netCDF4==1.7.2",
    "arepytools >= 1.7.6",
    "pydantic",
    "numba>=0.61",
    "h5py==3.14.0",
    "xarray",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
graphs = ["matplotlib >= 3.5"]
dev = ["ruff", "pylint", "nox"]
test = ["unittest-xml-reporting", "coverage"]
local_testing = ["sct[cli,graphs]>=2", "sct_aresys_reader", "sct_sentinel1_reader"]
docs = [
    "ipython",
    "nbsphinx",
    "sphinx",
    "sphinx-design",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "perseo-quality[graphs]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/perseo_quality/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "docs"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = [".venv", "docs", "scripts"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "A", "B", "I"]

[tool.pylint.master]
fail-under = 8
fail-on = ["unused-import"]

[tool.pylint.message_control]
disable = ["import-error", "logging-fstring-interpolation", "logging-not-lazy"]

[tool.pylint.format]
max-line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.resolution]
respect-source-order = true

[tool.pdm.scripts]
format_check = "ruff format --check"
format = "ruff format"
sort = "ruff check --select I --fix-only"
lint_check = "ruff check"
lint_fix = "ruff check --show-fixes --fix-only"
test = "python -m unittest discover -s ./tests -p test_*.py"
clean_doc = "python -m sphinx -M clean docs/source {args}"
build_doc = "python -m sphinx -b html docs/source {args}"
check_code = { composite = ["format_check", "lint_check"] }
fix_format = { composite = ["format", "sort", "lint_fix"] }
